--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +655,7 @@
        "[8 rows x 95 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +698,7 @@
        "Counter({'loan_status': 1})"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -744,7 +744,7 @@
        "Counter({'loan_status': 1})"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -786,7 +786,7 @@
        "0.6573009382322703"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +810,7 @@
        "       [ 6812, 10292]], dtype=int64)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -854,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -863,7 +863,7 @@
        "Counter({'loan_status': 1})"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -889,7 +889,7 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -902,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -911,7 +911,7 @@
        "0.6622479600626106"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -924,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +934,7 @@
        "       [ 5288, 11816]], dtype=int64)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -987,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -996,7 +996,7 @@
        "Counter({'loan_status': 1})"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1012,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1024,16 +1024,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5441784794709592"
+       "0.5447339051023905"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1051,8 +1051,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[   68,    33],\n",
-       "       [10003,  7101]])"
+       "array([[   70,    31],\n",
+       "       [10324,  6780]], dtype=int64)"
       ]
      },
      "execution_count": 22,
@@ -1062,28 +1062,31 @@
    ],
    "source": [
     "# Display the confusion matrix\n",
-    "# YOUR CODE HERE"
+    "confusion_matrix(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<function imblearn.metrics._classification.classification_report_imbalanced(y_true, y_pred, *, labels=None, target_names=None, sample_weight=None, digits=2, alpha=0.1, output_dict=False, zero_division='warn')>"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                   pre       rec       spe        f1       geo       iba       sup\n",
+      "\n",
+      "  high_risk       0.01      0.69      0.40      0.01      0.52      0.28       101\n",
+      "   low_risk       1.00      0.40      0.69      0.57      0.52      0.27     17104\n",
+      "\n",
+      "avg / total       0.99      0.40      0.69      0.56      0.52      0.27     17205\n",
+      "\n"
+     ]
     }
    ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "classification_report_imbalanced"
+    "print(classification_report_imbalanced(y_test, y_pred))"
    ]
   },
   {
@@ -1105,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1114,7 +1117,7 @@
        "Counter({'loan_status': 1})"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1131,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1143,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1152,7 +1155,7 @@
        "0.644711676499736"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1164,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1174,7 +1177,7 @@
        "       [7412, 9692]], dtype=int64)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1186,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
